# 5780_MiniProj_SmartBlinds

./: .clangd  .mxproject  CMakeLists.txt  README.md  STM32F072XX_FLASH.ld
Core/Inc/: adc.h  lcd.h  main.h  motor.h  uart.h
Core/Src/: adc.c  lcd.c  main.c  motor.c  uart.c
